Fixed sidebar overlaying menu modal by decreasing z-index

--- a/client/src/assets/sass/03_atoms/_sidebar.scss
+++ b/client/src/assets/sass/03_atoms/_sidebar.scss
@@ -1,6 +1,6 @@
 .sidebar {
   position: relative;
-  z-index: 1;
+  z-index: 0;
   &__header {
     margin-bottom: 15px;
     &--alternative {
